@@ -2,7 +2,6 @@ package edu.ksu.canvas.aviation.controller;
 
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.List;
 
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,11 +18,10 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.ModelAndView;
 
 import edu.ksu.canvas.aviation.entity.AviationStudent;
-import edu.ksu.canvas.aviation.entity.Makeup;
 import edu.ksu.canvas.aviation.form.MakeupForm;
 import edu.ksu.canvas.aviation.form.MakeupValidator;
-import edu.ksu.canvas.aviation.repository.AviationStudentRepository;
-import edu.ksu.canvas.aviation.repository.MakeupRepository;
+import edu.ksu.canvas.aviation.services.AviationStudentService;
+import edu.ksu.canvas.aviation.services.MakeupService;
 import edu.ksu.canvas.error.NoLtiSessionException;
 import edu.ksu.lti.model.LtiSession;
 
@@ -36,10 +34,10 @@ public class MakeupController extends AviationBaseController {
     private static final Logger LOG = Logger.getLogger(MakeupController.class);
     
     @Autowired
-    private AviationStudentRepository studentRepository;
-    
+    private MakeupService makeupService;
+
     @Autowired
-    private MakeupRepository makeupRepository;
+    private AviationStudentService studentService;
     
     @Autowired
     private MakeupValidator validator;
@@ -61,16 +59,8 @@ public class MakeupController extends AviationBaseController {
     }
 
     private ModelAndView studentMakeup(String sectionId, String studentId, boolean addEmptyEntry) {
-        AviationStudent student = studentRepository.findByStudentId(new Long(studentId));
-        List<Makeup> makeups = makeupRepository.findByAviationStudentOrderByDateOfClassAsc(student);
-        if(addEmptyEntry) {
-            makeups.add(new Makeup());
-        }
-        
-        MakeupForm makeupForm = new MakeupForm();
-        makeupForm.setEntriesFromMakeEntities(makeups);
-        makeupForm.setSectionId(Long.valueOf(sectionId));
-        makeupForm.setStudentId(Long.valueOf(studentId));
+        AviationStudent student = studentService.getStudent(new Long(studentId));
+        MakeupForm makeupForm = makeupService.createMakeupForm(Long.valueOf(studentId), Long.valueOf(sectionId), addEmptyEntry);
         
         ModelAndView page = new ModelAndView("studentMakeup");
         page.addObject("sectionId", sectionId);
@@ -78,17 +68,7 @@ public class MakeupController extends AviationBaseController {
         page.addObject("makeupForm", makeupForm);
         
         return page;
-    }
-    
-    @RequestMapping(value = "/deleteMakeup/{sectionId}/{studentId}/{makeupId}")
-    public ModelAndView deleteMakeup(@PathVariable String sectionId, @PathVariable String studentId, @PathVariable String makeupId) throws NoLtiSessionException {
-        LtiSession ltiSession = ltiLaunch.getLtiSession();
-        LOG.info("eid: "+ltiSession.getEid()+" is deleting a makeup entry.");
-        
-        persistenceService.deleteMakeup(makeupId);
-        return studentMakeup(sectionId, studentId);
-    }
-    
+    }    
     
     @RequestMapping(value = "/save", params = "saveMakeup", method = RequestMethod.POST)
     public ModelAndView saveMakeup(@ModelAttribute MakeupForm makeupForm, BindingResult bindingResult) throws NoLtiSessionException {
@@ -109,7 +89,7 @@ public class MakeupController extends AviationBaseController {
             String errorMessage = "Please correct user input and try saving again.";
             
             ModelAndView page = new ModelAndView("studentMakeup");
-            AviationStudent student = studentRepository.findByStudentId(makeupForm.getStudentId());
+            AviationStudent student = studentService.getStudent(makeupForm.getStudentId());
             page.addObject("sectionId", String.valueOf(makeupForm.getSectionId()));
             page.addObject("student", student);
             page.addObject("makeupForm", makeupForm);
@@ -117,7 +97,7 @@ public class MakeupController extends AviationBaseController {
             
             return page;
         } else {
-            persistenceService.updateMakeups(makeupForm);
+            makeupService.save(makeupForm);
         }
         
         ModelAndView page = studentMakeup(String.valueOf(makeupForm.getSectionId()), String.valueOf(makeupForm.getStudentId()), false);
